--- a/02.git/review.html
+++ b/02.git/review.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>review</title>
+    <p>비대면 홀수</p>
 </head>
 <body>
-    <h1>내일은</h1>
-    <h2>비대면 하는 날</h2>
-    <p>세빈이는 홀수</p>
+    
 </body>
 </html>
